The page is linked and working.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,10 +9,10 @@
 <title>Film Query</title>
 </head>
 <body>
-	<a href="home">Click me</a>
+	<a href="home.do">Click me</a>
 
 
-	<form:form action="search.do" method="GET">
+	<!-- <form:form action="search.do" method="GET">
 		<form:label path="filmID">Film ID:</form:label>
 		<form:input path="filmID"/>
 		<form:errors path="filmID"/>
@@ -23,7 +23,7 @@
 	
 	<form action="add.do" method="GET">
 		<input type="submit" value="Add Film"/>
-	</form>
+	</form> -->
 
 </body>
 </html>
